--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
     <section id="products">
         <h2>Products</h2>
         <div class="product">
-            <img src="product1.jpg" alt="Product 1">
+            <img src="image1.jpg" alt="Product 1">
             <h3>Product 1</h3>
             <p>Description of Product 1</p>
             <button>Add to Cart</button>
         </div>
         <div class="product">
-            <img src="product2.jpg" alt="Product 2">
+            <img src="image2.jpg" alt="Product 2">
             <h3>Product 2</h3>
             <p>Description of Product 2</p>
             <button>Add to Cart</button>
