--- a/index.html
+++ b/index.html
@@ -11,35 +11,45 @@
         <h1>ElectroniqueHub</h1>
         <nav>
             <ul>
+                <li><a href="#home">Home</a></li>
                 <li><a href="#products">Products</a></li>
-                <li><a href="#about">About Us</a></li>
+                <li><a href="#cart">Shopping Cart</a></li>
+                <li><a href="#checkout">Checkout</a></li>
+                <li><a href="#account">User Account</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
+    <section id="home">
+        <h2>Home</h2>
+        <p>Welcome to ElectroniqueHub!</p>
+        <!-- Add clean and visually appealing layout here -->
+    </section>
     <section id="products">
         <h2>Products</h2>
-        <div class="product">
-            <img src="image1.jpg" alt="Product 1">
-            <h3>Product 1</h3>
-            <p>Description of Product 1</p>
-            <button>Add to Cart</button>
-        </div>
-        <div class="product">
-            <img src="image2.jpg" alt="Product 2">
-            <h3>Product 2</h3>
-            <p>Description of Product 2</p>
-            <button>Add to Cart</button>
-        </div>
-        <!-- Add more products as needed -->
+        <!-- Add sections highlighting new arrivals, featured products, promotions, and popular categories -->
+        <!-- Add distinct categories for various electronic products -->
+        <!-- Add dedicated pages showcasing relevant products, filters, and sorting options -->
     </section>
-    <section id="about">
-        <h2>About Us</h2>
-        <p>Welcome to ElectroniqueHub, your one-stop destination for all electronic gadgets and accessories!</p>
+    <section id="cart">
+        <h2>Shopping Cart</h2>
+        <!-- Add visible and accessible shopping cart icon -->
+        <!-- Allow users to view and manage selected items -->
+    </section>
+    <section id="checkout">
+        <h2>Checkout</h2>
+        <!-- Streamline checkout process into multiple steps -->
+        <!-- Include entering shipping information, selecting payment methods, applying discounts/gift cards, and reviewing orders -->
+    </section>
+    <section id="account">
+        <h2>User Account</h2>
+        <!-- Allow registered users to access accounts -->
+        <!-- Include viewing order history, managing addresses, tracking shipments, and updating personal information -->
+        <!-- Add login/register option for new and existing users -->
     </section>
     <section id="contact">
         <h2>Contact</h2>
-        <p>If you have any questions or inquiries, feel free to contact us:</p>
+        <!-- Include contact information for inquiries -->
         <ul>
             <li>Email: info@electroniquehub.com</li>
             <li>Phone: 234-901165-3982</li>
