--- a/index.html
+++ b/index.html
@@ -11,6 +11,35 @@
         <h1>ElectroniqueHub</h1>
         <nav>
             <ul>
+                <li><a href="#products">Products</a></li>
+                <li><a href="#about">About Us</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <section id="products">
+        <h2>Products</h2>
+        <div class="product">
+            <img src="image1.jpg" alt="Product 1">
+            <h3>Product 1</h3>
+            <p>Description of Product 1</p>
+            <button>Add to Cart</button>
+        </div>
+        <div class="product">
+            <img src="image2.jpg" alt="Product 2">
+            <h3>Product 2</h3>
+            <p>Description of Product 2</p>
+            <button>Add to Cart</button>
+        </div>
+        <!-- Add more products as needed -->
+    </section>
+    <section id="about">
+        <h2>About Us</h2>
+        <p>Welcome to ElectroniqueHub, your one-stop destination for all electronic gadgets and accessories!</p>
+    <header>
+        <h1>ElectroniqueHub</h1>
+        <nav>
+            <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#products">Products</a></li>
                 <li><a href="#cart">Shopping Cart</a></li>
