--- a/index.html
+++ b/index.html
@@ -5,41 +5,80 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ElectroniqueHub - Your Electronic Store</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        /* Add custom styles here */
+    </style>
 </head>
 <body>
     <header>
         <h1>ElectroniqueHub</h1>
         <nav>
             <ul>
+                <li><a href="#home">Home</a></li>
                 <li><a href="#products">Products</a></li>
-                <li><a href="#about">About Us</a></li>
+                <li><a href="#cart">Shopping Cart</a></li>
+                <li><a href="#checkout">Checkout</a></li>
+                <li><a href="#account">User Account</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
+    <section id="home">
+        <h2>Home</h2>
+        <div class="slideshow-container">
+            <div class="mySlides fade">
+                <img src="image1.jpg" style="width:100%">
+            </div>
+            <div class="mySlides fade">
+                <img src="image2.jpg" style="width:100%">
+            </div>
+            <div class="mySlides fade">
+                <img src="image3.jpg" style="width:100%">
+            </div>
+        </div>
+        <br>
+        <div style="text-align:center">
+            <span class="dot"></span>
+            <span class="dot"></span>
+            <span class="dot"></span>
+        </div>
+    </section>
     <section id="products">
         <h2>Products</h2>
         <div class="product">
-            <img src="image1.jpg" alt="Product 1">
-            <h3>Product 1</h3>
-            <p>Description of Product 1</p>
+            <img src="product1.jpeg" alt="Product 1">
+            <h3>Iphone 14</h3>
+            <p>Get iPhone 14 and iPhone 14 Plus for an amazing price with special carrier trade-in offers.</p>
+            <p>$529.99</p>
             <button>Add to Cart</button>
         </div>
-        <div class="product">
-            <img src="image2.jpg" alt="Product 2">
-            <h3>Product 2</h3>
-            <p>Description of Product 2</p>
+         <div class="product">
+            <img src="product1.jpeg" alt="Product 1">
+            <h3>LG TV</h3>
+            <p>LG TVs suit every room and budget. From premium OLED and the ultimate LED TV, NanoCell, to our wider Ultra HD range.</p>
+            <p>$469.99</p>
             <button>Add to Cart</button>
-        </div>
         <!-- Add more products as needed -->
     </section>
-    <section id="about">
-        <h2>About Us</h2>
-        <p>Welcome to ElectroniqueHub, your one-stop destination for all electronic gadgets and accessories!</p>
+    <section id="cart">
+        <h2>Shopping Cart</h2>
+        <!-- Add visible and accessible shopping cart icon -->
+        <!-- Allow users to view and manage selected items -->
+    </section>
+    <section id="checkout">
+        <h2>Checkout</h2>
+        <!-- Streamline checkout process into multiple steps -->
+        <!-- Include entering shipping information, selecting payment methods, applying discounts/gift cards, and reviewing orders -->
+    </section>
+    <section id="account">
+        <h2>User Account</h2>
+        <!-- Allow registered users to access accounts -->
+        <!-- Include viewing order history, managing addresses, tracking shipments, and updating personal information -->
+        <!-- Add login/register option for new and existing users -->
     </section>
     <section id="contact">
         <h2>Contact</h2>
-        <p>If you have any questions or inquiries, feel free to contact us:</p>
+        <!-- Include contact information for inquiries -->
         <ul>
             <li>Email: info@electroniquehub.com</li>
             <li>Phone: 234-901165-3982</li>
@@ -49,6 +88,7 @@
     <footer>
         <p>&copy; 2024 ElectroniqueHub. All rights reserved.</p>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
 
