--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
         <h2>Home</h2>
         <div class="slideshow-container">
             <div class="mySlides fade">
-                <img src="image1.jpg" style="width:100%">
+                <img src="image-1.jpg" style="width:100%">
             </div>
             <div class="mySlides fade">
-                <img src="image2.jpg" style="width:100%">
+                <img src="image-2.jpg" style="width:100%">
             </div>
             <div class="mySlides fade">
-                <img src="image3.jpg" style="width:100%">
+                <img src="image-3.jpeg" style="width:100%">
             </div>
         </div>
         <br>
@@ -53,32 +53,12 @@
             <button>Add to Cart</button>
         </div>
          <div class="product">
-            <img src="product1.jpeg" alt="Product 1">
+            <img src="product2.jpeg" alt="Product 1">
             <h3>LG TV</h3>
             <p>LG TVs suit every room and budget. From premium OLED and the ultimate LED TV, NanoCell, to our wider Ultra HD range.</p>
             <p>$469.99</p>
             <button>Add to Cart</button>
-        <!-- Add more products as needed -->
-    </section>
-    <section id="cart">
-        <h2>Shopping Cart</h2>
-        <!-- Add visible and accessible shopping cart icon -->
-        <!-- Allow users to view and manage selected items -->
-    </section>
-    <section id="checkout">
-        <h2>Checkout</h2>
-        <!-- Streamline checkout process into multiple steps -->
-        <!-- Include entering shipping information, selecting payment methods, applying discounts/gift cards, and reviewing orders -->
-    </section>
-    <section id="account">
-        <h2>User Account</h2>
-        <!-- Allow registered users to access accounts -->
-        <!-- Include viewing order history, managing addresses, tracking shipments, and updating personal information -->
-        <!-- Add login/register option for new and existing users -->
-    </section>
-    <section id="contact">
-        <h2>Contact</h2>
-        <!-- Include contact information for inquiries -->
+        <!-- Add more products as needed --1
         <ul>
             <li>Email: info@electroniquehub.com</li>
             <li>Phone: 234-901165-3982</li>
