--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <h2>Home</h2>
         <div class="slideshow-container">
             <div class="mySlides fade">
-                <img src="image-1.jpg.jpeg" alt="image-1">
+                <img src="image-1.jpg" alt="image-1">
             </div>
             <div class="mySlides fade">
                 <img src="image-2.jpg" style="width:100%">
