--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <h2>Home</h2>
         <div class="slideshow-container">
             <div class="mySlides fade">
-                <img src="https://github.com/bevimo47/ElectroniqueHub/blob/216326d38a7a9cb336fdd767ae1ea819d5d2e3f5/image-1.jpg" alt="image-1">
+                <img src="image-1.jpg" style="width:100%">
             </div>
             <div class="mySlides fade">
                 <img src="image-2.jpg" style="width:100%">
