Updating the URL

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     </header>
     <section id="home">
         <h2>Home</h2>
+        <P>ElectroniqueHub is your premier destination for all things electronic, offering a wide range of high-quality gadgets, devices, and accessories. </P>
+        <br>
         <div class="slideshow-container">
             <div class="mySlides fade">
                 <img src="/Users/Victor/Documents/GitHub/ElectroniqueHub/image-1.jpg" style="width:100%">
@@ -37,6 +39,9 @@
             </div>
         </div>
         <br>
+        <p> MISSION STATEMENT</p>
+        <br>
+        <p>Our mission is to provide customers with cutting-edge technology and exceptional service, ensuring a seamless and enjoyable shopping experience. At ElectroniqueHub, we strive to stay ahead of the curve, offering the latest innovations at competitive prices. Whether you're in search of smartphones, laptops, TVs, or accessories, we've got you covered with top-notch products from leading brands. With a commitment to excellence and customer satisfaction, ElectroniqueHub is your go-to online store for all your electronic needs.</p>
         <div style="text-align:center">
             <span class="dot"></span>
             <span class="dot"></span>
