Updating some tabs

--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
     <section id="home">
         <h2>Home</h2>
         <P>ElectroniqueHub is your premier destination for all things electronic, offering a wide range of high-quality gadgets, devices, and accessories. </P>
-        <br>
         <div class="slideshow-container">
             <div class="mySlides fade">
                 <img src="/Users/Victor/Documents/GitHub/ElectroniqueHub/image-1.jpg" style="width:100%">
@@ -40,7 +39,6 @@
         </div>
         <br>
         <p> MISSION STATEMENT</p>
-        <br>
         <p>Our mission is to provide customers with cutting-edge technology and exceptional service, ensuring a seamless and enjoyable shopping experience. At ElectroniqueHub, we strive to stay ahead of the curve, offering the latest innovations at competitive prices. Whether you're in search of smartphones, laptops, TVs, or accessories, we've got you covered with top-notch products from leading brands. With a commitment to excellence and customer satisfaction, ElectroniqueHub is your go-to online store for all your electronic needs.</p>
         <div style="text-align:center">
             <span class="dot"></span>
@@ -63,7 +61,26 @@
             <p>LG TVs suit every room and budget. From premium OLED and the ultimate LED TV, NanoCell, to our wider Ultra HD range.</p>
             <p>$469.99</p>
             <button>Add to Cart</button>
-        <!-- Add more products as needed --1
+ </section>
+    <section id="cart">
+        <h2>Shopping Cart</h2>
+        <!-- Add visible and accessible shopping cart icon -->
+        <!-- Allow users to view and manage selected items -->
+    </section>
+    <section id="checkout">
+        <h2>Checkout</h2>
+        <!-- Streamline checkout process into multiple steps -->
+        <!-- Include entering shipping information, selecting payment methods, applying discounts/gift cards, and reviewing orders -->
+    </section>
+    <section id="account">
+        <h2>User Account</h2>
+        <!-- Allow registered users to access accounts -->
+        <!-- Include viewing order history, managing addresses, tracking shipments, and updating personal information -->
+        <!-- Add login/register option for new and existing users -->
+    </section>
+    <section id="contact">
+        <h2>Contact</h2>
+        <!-- Include contact information for inquiries -->
         <ul>
             <li>Email: info@electroniquehub.com</li>
             <li>Phone: 234-901165-3982</li>
@@ -76,5 +93,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
-
