Updating URL, folders and files

--- a/index.html
+++ b/index.html
@@ -25,21 +25,19 @@
     </header>
     <section id="home">
         <h2>Home</h2>
-        <P>ElectroniqueHub is your premier destination for all things electronic, offering a wide range of high-quality gadgets, devices, and accessories. </P>
         <div class="slideshow-container">
             <div class="mySlides fade">
-                <img src="/Users/Victor/Documents/GitHub/ElectroniqueHub/image-1.jpg" style="width:100%">
+                <img class="image-1" src="assets/images/image-1.jpg" alt="image-1">
             </div>
             <div class="mySlides fade">
-                <img src="image-2.jpg" style="width:100%">
+                <img class="image-2" src="assets/images/image-2.jpg" alt="image-2">
             </div>
             <div class="mySlides fade">
-                <img src="image-3.jpeg" style="width:100%">
+                <img class="image-3" src="assets/images/image-3.jpeg" alt="image-3">
             </div>
         </div>
         <br>
-        <p> MISSION STATEMENT</p>
-        <p>Our mission is to provide customers with cutting-edge technology and exceptional service, ensuring a seamless and enjoyable shopping experience. At ElectroniqueHub, we strive to stay ahead of the curve, offering the latest innovations at competitive prices. Whether you're in search of smartphones, laptops, TVs, or accessories, we've got you covered with top-notch products from leading brands. With a commitment to excellence and customer satisfaction, ElectroniqueHub is your go-to online store for all your electronic needs.</p>
+        <P>ElectroniqueHub is your premier destination for all things electronic, offering a wide range of high-quality gadgets, devices, and accessories. </P>
         <div style="text-align:center">
             <span class="dot"></span>
             <span class="dot"></span>
@@ -78,6 +76,8 @@
         <!-- Include viewing order history, managing addresses, tracking shipments, and updating personal information -->
         <!-- Add login/register option for new and existing users -->
     </section>
+    <h2> MISSION STATEMENT</h2>
+    <p>Our mission is to provide customers with cutting-edge technology and exceptional service, ensuring a seamless and enjoyable shopping experience. At ElectroniqueHub, we strive to stay ahead of the curve, offering the latest innovations at competitive prices. Whether you're in search of smartphones, laptops, TVs, or accessories, we've got you covered with top-notch products from leading brands. With a commitment to excellence and customer satisfaction, ElectroniqueHub is your go-to online store for all your electronic needs.</p>
     <section id="contact">
         <h2>Contact</h2>
         <!-- Include contact information for inquiries -->
