--- a/index.html
+++ b/index.html
@@ -3,11 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ElectroniqueHub - Your Electronic Store</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>ElectroniqueHub</title>
     <style>
-        /* Add custom styles here */
-    </style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+        .container {
+            max-width: 800px;
+            margin: 20px auto;
+            padding: 20px;
+            background-color: #ffff;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        h1, h2, h3 {
+            color: black;
+        }
+        h2 {
+            color: #451402; /* Brown */
+        }
+        .recipe-img {
+            width: 100%;
+            border-radius: 10px;
+            margin-bottom: 20px;
+        }
+        th {
+            background-color: #f2f2f2;
+        }
+    </head>
 </head>
 <body>
     <header>
