--- a/index.html
+++ b/index.html
@@ -3,36 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ElectroniqueHub</title>
+    <title>ElectroniqueHub - Your Electronic Store</title>
+    <link rel="stylesheet" href="styles.css">
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
-        .container {
-            max-width: 800px;
-            margin: 20px auto;
-            padding: 20px;
-            background-color: #ffff;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        h1, h2, h3 {
-            color: black;
-        }
-        h2 {
-            color: #451402; /* Brown */
-        }
-        .recipe-img {
-            width: 100%;
-            border-radius: 10px;
-            margin-bottom: 20px;
-        }
-        th {
-            background-color: #f2f2f2;
-        }
-    </head>
+        /* Add custom styles here */
+    </style>
 </head>
 <body>
     <header>
@@ -83,7 +58,7 @@
             <p>LG TVs suit every room and budget. From premium OLED and the ultimate LED TV, NanoCell, to our wider Ultra HD range.</p>
             <p>$469.99</p>
             <button>Add to Cart</button>
-     </section>
+    </section>
     <section id="cart">
         <h2>Shopping Cart</h2>
         <!-- Add visible and accessible shopping cart icon -->
