--- a/index.html
+++ b/index.html
@@ -5,9 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ElectroniqueHub - Your Electronic Store</title>
     <link rel="stylesheet" href="styles.css">
-    <style>
-        /* Add custom styles here */
-    </style>
 </head>
 <body>
     <header>
@@ -27,17 +24,17 @@
         <h2>Home</h2>
         <div class="slideshow-container">
             <div class="mySlides fade">
-                <img class="image-1" src="assets/images/image-1.jpg" alt="image-1">
+                <img src="assets/images/image-1.jpg" alt="image-1" class="image-1">
             </div>
             <div class="mySlides fade">
-                <img class="image-2" src="assets/images/image-2.jpg" alt="image-2">
+                <img src="assets/images/image-2.jpg" alt="image-2" class="image-2">
             </div>
             <div class="mySlides fade">
-                <img class="image-3" src="assets/images/image-3.jpeg" alt="image-3">
+                <img src="assets/images/image-3.jpeg" alt="image-3" class="image-3">
             </div>
         </div>
-        <P>ElectroniqueHub is your premier destination for all things electronic, offering a wide range of high-quality gadgets, devices, and accessories. </P>
-        <div style="text-align:center">
+        <p>ElectroniqueHub is your premier destination for all things electronic, offering a wide range of high-quality gadgets, devices, and accessories.</p>
+        <div class="dots" style="text-align:center">
             <span class="dot"></span>
             <span class="dot"></span>
             <span class="dot"></span>
@@ -52,12 +49,13 @@
             <p>$529.99</p>
             <button>Add to Cart</button>
         </div>
-         <div class="product">
+        <div class="product">
             <img src="product2.jpeg" alt="Product 1">
             <h3>LG TV</h3>
             <p>LG TVs suit every room and budget. From premium OLED and the ultimate LED TV, NanoCell, to our wider Ultra HD range.</p>
             <p>$469.99</p>
             <button>Add to Cart</button>
+        </div>
     </section>
     <section id="cart">
         <h2>Shopping Cart</h2>
@@ -75,7 +73,7 @@
         <!-- Include viewing order history, managing addresses, tracking shipments, and updating personal information -->
         <!-- Add login/register option for new and existing users -->
     </section>
-    <h3> MISSION STATEMENT</h3>
+    <h3>MISSION STATEMENT</h3>
     <p>Our mission is to provide customers with cutting-edge technology and exceptional service, ensuring a seamless and enjoyable shopping experience. At ElectroniqueHub, we strive to stay ahead of the curve, offering the latest innovations at competitive prices. Whether you're in search of smartphones, laptops, TVs, or accessories, we've got you covered with top-notch products from leading brands. With a commitment to excellence and customer satisfaction, ElectroniqueHub is your go-to online store for all your electronic needs.</p>
     <section id="contact">
         <h2>Contact</h2>
