Updating URL, folders and files

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     </header>
     <section id="home">
         <h2>Home</h2>
-        <div class="slideshow-container">
-            <div class="mySlides fade">
+        <div class="image">
+            <div class="image">
                 <img src="assets/images/image-1.jpg" alt="image-1" class="image-1">
             </div>
         </div>
