--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
                 <img src="assets/images/image-1.jpg" alt="image-1" class="image-1">
             </div>
         </div>
+        <div class="image">
+            <div class="image">
+                <img src="assets/images/image-2.jpg" alt="image-2" class="image-2">
+            </div>
+        </div>
         <p>ElectroniqueHub is your premier destination for all things electronic, offering a wide range of high-quality gadgets, devices, and accessories.</p>
         <div class="dots" style="text-align:center">
             <span class="dot"></span>
