--- a/index.html
+++ b/index.html
@@ -24,12 +24,7 @@
         <h2>Home</h2>
         <div class="image">
             <div class="image">
-                <img src="assets/images/image-1.jpg" alt="image-1" class="image-1">
-            </div>
-        </div>
-        <div class="image">
-            <div class="image">
-                <img src="assets/images/image-2.jpg" alt="image-2" class="image-2">
+                <img src="assets/images/image-3.jpeg" alt="image-3" class="image-3">
             </div>
         </div>
         <p>ElectroniqueHub is your premier destination for all things electronic, offering a wide range of high-quality gadgets, devices, and accessories.</p>
