Updating URL, folders and files

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ElectroniqueHub - Your Electronic Store</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        /* Add custom styles here */
+    </style>
 </head>
 <body>
     <header>
@@ -22,13 +25,19 @@
     </header>
     <section id="home">
         <h2>Home</h2>
-        <div class="image">
-            <div class="image">
-                <img src="assets/images/image-3.jpeg" alt="image-3" class="image-3">
+        <div class="slideshow-container">
+            <div class="mySlides fade">
+                <img src="image1.jpg" style="width:100%">
+            </div>
+            <div class="mySlides fade">
+                <img src="image2.jpg" style="width:100%">
+            </div>
+            <div class="mySlides fade">
+                <img src="image3.jpg" style="width:100%">
             </div>
         </div>
-        <p>ElectroniqueHub is your premier destination for all things electronic, offering a wide range of high-quality gadgets, devices, and accessories.</p>
-        <div class="dots" style="text-align:center">
+        <br>
+        <div style="text-align:center">
             <span class="dot"></span>
             <span class="dot"></span>
             <span class="dot"></span>
