--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ElectroniqueHub - Your Electronic Store</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>ElectroniqueHub</title>
+    <link rel="stylesheet" href="style.css">
+    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
     <style>
-        /* Add custom styles here */
+        .attribution { font-size: 11px; text-align: center; }
+        .attribution a { color: hsl(228, 45%, 44%); }
     </style>
 </head>
 <body>
@@ -27,17 +29,17 @@
         <h2>Home</h2>
         <div class="slideshow-container">
             <div class="mySlides fade">
-                <img src="image1.jpg" style="width:100%">
+                <img src="assets/images/image-1.jpg" alt="image-1" class="image-1">
             </div>
             <div class="mySlides fade">
-                <img src="image2.jpg" style="width:100%">
+                <img src="assets/images/image-2.jpg" alt="image-2" class="image-2">
             </div>
             <div class="mySlides fade">
-                <img src="image3.jpg" style="width:100%">
+                <img src="assets/images/image-3.jpeg" alt="image-3" class="image-3">
             </div>
         </div>
-        <br>
-        <div style="text-align:center">
+        <p>ElectroniqueHub is your premier destination for all things electronic, offering a wide range of high-quality gadgets, devices, and accessories.</p>
+        <div class="dots" style="text-align:center">
             <span class="dot"></span>
             <span class="dot"></span>
             <span class="dot"></span>
@@ -60,6 +62,22 @@
             <button>Add to Cart</button>
         </div>
     </section>
+    <section id="cart">
+        <h2>Shopping Cart</h2>
+        <!-- Add visible and accessible shopping cart icon -->
+        <!-- Allow users to view and manage selected items -->
+    </section>
+    <section id="checkout">
+        <h2>Checkout</h2>
+        <!-- Streamline checkout process into multiple steps -->
+        <!-- Include entering shipping information, selecting payment methods, applying discounts/gift cards, and reviewing orders -->
+    </section>
+    <section id="account">
+        <h2>User Account</h2>
+        <!-- Allow registered users to access accounts -->
+        <!-- Include viewing order history, managing addresses, tracking shipments, and updating personal information -->
+        <!-- Add login/register option for new and existing users -->
+    </section>
     <h3>MISSION STATEMENT</h3>
     <p>Our mission is to provide customers with cutting-edge technology and exceptional service, ensuring a seamless and enjoyable shopping experience. At ElectroniqueHub, we strive to stay ahead of the curve, offering the latest innovations at competitive prices. Whether you're in search of smartphones, laptops, TVs, or accessories, we've got you covered with top-notch products from leading brands. With a commitment to excellence and customer satisfaction, ElectroniqueHub is your go-to online store for all your electronic needs.</p>
     <section id="contact">
@@ -77,3 +95,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
+
