--- a/index.html
+++ b/index.html
@@ -3,12 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ElectroniqueHub</title>
-    <link rel="stylesheet" href="style.css">
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+    <title>ElectroniqueHub - Your Electronic Store</title>
+    <link rel="stylesheet" href="styles.css">
     <style>
-        .attribution { font-size: 11px; text-align: center; }
-        .attribution a { color: hsl(228, 45%, 44%); }
+        /* Add custom styles here */
     </style>
 </head>
 <body>
@@ -29,38 +27,36 @@
         <h2>Home</h2>
         <div class="slideshow-container">
             <div class="mySlides fade">
-                <img src="assets/images/image-1.jpg" alt="image-1" class="image-1">
+                <img src="image-1.jpg" style="width:100%">
             </div>
             <div class="mySlides fade">
-                <img src="assets/images/image-2.jpg" alt="image-2" class="image-2">
+                <img src="image-2.jpg" style="width:100%">
             </div>
             <div class="mySlides fade">
-                <img src="assets/images/image-3.jpeg" alt="image-3" class="image-3">
+                <img src="image-3.jpeg" style="width:100%">
             </div>
         </div>
-        <p>ElectroniqueHub is your premier destination for all things electronic, offering a wide range of high-quality gadgets, devices, and accessories.</p>
-        <div class="dots" style="text-align:center">
+        <br>
+        <div style="text-align:center">
             <span class="dot"></span>
             <span class="dot"></span>
             <span class="dot"></span>
         </div>
-    </section>
-    <section id="products">
-        <h2>Products</h2>
+    <section>
         <div class="product">
-            <img src="product1.jpeg" alt="Product 1">
-            <h3>Iphone 14</h3>
-            <p>Get iPhone 14 and iPhone 14 Plus for an amazing price with special carrier trade-in offers.</p>
-            <p>$529.99</p>
-            <button>Add to Cart</button>
-        </div>
-        <div class="product">
-            <img src="product2.jpeg" alt="Product 1">
-            <h3>LG TV</h3>
-            <p>LG TVs suit every room and budget. From premium OLED and the ultimate LED TV, NanoCell, to our wider Ultra HD range.</p>
-            <p>$469.99</p>
-            <button>Add to Cart</button>
-        </div>
+        <img src="product1.jpeg" alt="Product 1">
+        <h3>Iphone 14</h3>
+        <p>Get iPhone 14 and iPhone 14 Plus for an amazing price with special carrier trade-in offers.</p>
+        <p>$529.99</p>
+        <button>Add to Cart</button>
+    </div>
+    <div class="product">
+        <img src="product2.jpeg" alt="Product 1">
+        <h3>LG TV</h3>
+        <p>LG TVs suit every room and budget. From premium OLED and the ultimate LED TV, NanoCell, to our wider Ultra HD range.</p>
+        <p>$469.99</p>
+        <button>Add to Cart</button>
+    </div>
     </section>
     <section id="cart">
         <h2>Shopping Cart</h2>
@@ -78,8 +74,6 @@
         <!-- Include viewing order history, managing addresses, tracking shipments, and updating personal information -->
         <!-- Add login/register option for new and existing users -->
     </section>
-    <h3>MISSION STATEMENT</h3>
-    <p>Our mission is to provide customers with cutting-edge technology and exceptional service, ensuring a seamless and enjoyable shopping experience. At ElectroniqueHub, we strive to stay ahead of the curve, offering the latest innovations at competitive prices. Whether you're in search of smartphones, laptops, TVs, or accessories, we've got you covered with top-notch products from leading brands. With a commitment to excellence and customer satisfaction, ElectroniqueHub is your go-to online store for all your electronic needs.</p>
     <section id="contact">
         <h2>Contact</h2>
         <!-- Include contact information for inquiries -->
@@ -95,5 +89,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
+
 
 
