--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <img src="image-2.jpg" style="width:100%">
             </div>
             <div class="mySlides fade">
-                <img src="image-3.jpeg" style="width:100%">
+                <img src="image-3.jpg" style="width:100%">
             </div>
         </div>
         <br>
@@ -42,21 +42,23 @@
             <span class="dot"></span>
             <span class="dot"></span>
         </div>
-    <section>
+    </section>
+    <section id="products">
+        <h2>Products</h2>
         <div class="product">
-        <img src="product1.jpeg" alt="Product 1">
-        <h3>Iphone 14</h3>
-        <p>Get iPhone 14 and iPhone 14 Plus for an amazing price with special carrier trade-in offers.</p>
-        <p>$529.99</p>
-        <button>Add to Cart</button>
-    </div>
-    <div class="product">
-        <img src="product2.jpeg" alt="Product 1">
-        <h3>LG TV</h3>
-        <p>LG TVs suit every room and budget. From premium OLED and the ultimate LED TV, NanoCell, to our wider Ultra HD range.</p>
-        <p>$469.99</p>
-        <button>Add to Cart</button>
-    </div>
+            <img src="product1.jpeg" alt="Product 1">
+            <h3>Iphone 14</h3>
+            <p>Get iPhone 14 and iPhone 14 Plus for an amazing price with special carrier trade-in offers.</p>
+            <p>$529.99</p>
+            <button>Add to Cart</button>
+        </div>
+        <div class="product">
+            <img src="product2.jpeg" alt="Product 2">
+            <h3>LG TV</h3>
+            <p>LG TVs suit every room and budget. From premium OLED and the ultimate LED TV, NanoCell, to our wider Ultra HD range.</p>
+            <p>$469.99</p>
+            <button>Add to Cart</button>
+        </div>
     </section>
     <section id="cart">
         <h2>Shopping Cart</h2>
@@ -89,6 +91,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
