Updating URL, folders and files

--- a/index.html
+++ b/index.html
@@ -59,6 +59,13 @@
             <p>$469.99</p>
             <button>Add to Cart</button>
         </div>
+        <div class="product">
+        <img src="product3.jpeg" alt="Product 3">
+        <h3>6.5 Inch Self-Balancing Skin Hover Electric Skate Board</h3>
+        <p>6.5 Inch Hoverboard 2 Wheel Smart Skateboard Self Balance Electric Scooter with Built-in Bluetooth Speaker LED Wheels and Side Lights with Bag.</p>
+        <p>$199.99</p>
+        <button>Add to Cart</button>
+    </div>
     </section>
     <section id="cart">
         <h2>Shopping Cart</h2>
