--- a/index.html
+++ b/index.html
@@ -29,12 +29,6 @@
             <div class="mySlides fade">
                 <img src="image-1.jpg" style="width:100%">
             </div>
-            <div class="mySlides fade">
-                <img src="image2.jpg" style="width:100%">
-            </div>
-            <div class="mySlides fade">
-                <img src="image3.jpg" style="width:100%">
-            </div>
         </div>
         <br>
         <div style="text-align:center">
@@ -47,9 +41,9 @@
         <h2>Products</h2>
         <div class="product">
             <img src="product-1.jpeg" alt="Product 1">
-            <h3>Iphone 14</h3>
-            <p>Get iPhone 14 and iPhone 14 Plus for an amazing price with special carrier trade-in offers.</p>
-            <p>$529.99</p>
+            <h3>iPhone 14, Apple Watch Ultra and Airpods</h3>
+            <p>Get iPhone 14, Apple Watch and Airpods for an amazing price with special carrier trade-in offers.</p>
+            <p>$929.99</p>
             <button>Add to Cart</button>
         </div>
         <div class="product">
