Updating URL, folders and files

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
     </header>
     <section id="home">
         <h2>Home</h2>
-        <div class="slideshow-container">
-            <div class="mySlides fade">
-                <img src="image-1.jpg" style="width:100%">
+        <div class="image">
+            <div class="image">
+                 <img class="image-1" src="assets/images/image-1.jpeg" alt="image-1"> style="width:100%">
             </div>
         </div>
         <br>
