--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <h2>Home</h2>
         <div class="image">
             <div class="image">
-                 <img class="image-1" src="assets/images/image-1.jpeg" alt="image-1"> style="width:100%">
+                 <img class="image-1" src="assets/images/image-1.jpeg" alt="image-1" style="width:100%">
             </div>
         </div>
         <br>
