Updating URL, folders and files

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             </ul>
         </nav>
     </header>
+    <p>ElectroniqueHub is your premier destination for all things electronic, offering a wide range of high-quality gadgets, devices, and accessories.</p>
     <section id="home">
         <h2>Home</h2>
         <div class="image">
@@ -61,6 +62,8 @@
         <button>Add to Cart</button>
     </div>
     </section>
+     <h3>MISSION STATEMENT</h3>
+    <p>Our mission is to provide customers with cutting-edge technology and exceptional service, ensuring a seamless and enjoyable shopping experience. At ElectroniqueHub, we strive to stay ahead of the curve, offering the latest innovations at competitive prices. Whether you're in search of smartphones, laptops, TVs, or accessories, we've got you covered with top-notch products from leading brands. With a commitment to excellence and customer satisfaction, ElectroniqueHub is your go-to online store for all your electronic needs.</p>
     <section id="contact">
         <h2>Contact</h2>
         <!-- Include contact information for inquiries -->
