--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <section id="home">
         <h2>Home</h2>
         <div class="image">
-            <div class="image">
-                 <img class="image-1" src="assets/images/image-1.jpeg" alt="image-1" style="width:100%">
+            <div class="image"
+                 <img class="image1" src="assets/images/image1.jpeg" alt="image1">
             </div>
         </div>
         <br>
