Updating URL, folders and files

--- a/index.html
+++ b/index.html
@@ -24,11 +24,17 @@
         </nav>
     </header>
     <p>ElectroniqueHub is your premier destination for all things electronic, offering a wide range of high-quality gadgets, devices, and accessories.</p>
-    <section id="home">
+  <section id="home">
         <h2>Home</h2>
-        <div class="image">
-            <div class="image"
-                 <img class="image1" src="assets/images/image1.jpeg" alt="image1">
+        <div class="slideshow-container">
+            <div class="mySlides fade">
+                <img src="image-1.jpg" style="width:100%">
+            </div>
+            <div class="mySlides fade">
+                <img src="image-2.jpg" style="width:100%">
+            </div>
+            <div class="mySlides fade">
+                <img src="image-3.jpg" style="width:100%">
             </div>
         </div>
         <br>
