Updating URL, folders and files

--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
         <h2>Home</h2>
         <div class="slideshow-container">
             <div class="mySlides fade">
-                <img src="image1.jpg" style="width:100%">
+                <img src="image-1.jpg" style="width:100%">
             </div>
             <div class="mySlides fade">
-                <img src="image2.jpg" style="width:100%">
+                <img src="image" style="width:100%">
             </div>
             <div class="mySlides fade">
-                <img src="image3.jpg" style="width:100%">
+                <img src="image" style="width:100%">
             </div>
         </div>
         <br>
