--- a/index.html
+++ b/index.html
@@ -48,8 +48,12 @@
         <h2>Products</h2>
         <div class="product">
             <img src="product-1.jpeg" alt="Product 1">
-            <h3>iPhone 14, Apple Watch Ultra and Airpods</h3>
-            <p>Get iPhone 14, Apple Watch and Airpods for an amazing price with special carrier trade-in offers.</p>
+            <h3>iPhone 14, Apple Watch 
+                Ultra and Airpods</h3>
+            <p>Get iPhone 14, Apple Watch
+             and Airpods for an amazing 
+             price with special carrier 
+             trade-in offers.</p>
             <p>$929.99</p>
             <button>Add to Cart</button>
         </div>
